# paping

./: AUTHORS  Changelog  Makefile.am  README.md  configure.ac
doc/: Makefile.am  paping.8  paping.txt
src/: Makefile.am  standard.h
